Finish adding all content

--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
                     </template>
                     <p class="callout">{{page.callout}}</p>
                     <p><em>{{page.source}}</em></p>
-                    <span><core-icon icon="social:post-facebook"></core-icon></span>
                   </div>
                 </section>
               </template>
@@ -470,7 +469,7 @@
         {
           url: 'The-Total-Tax-Burden-on-Corporate-Investment-Is-High-in-the-US',
           name: 'The Total Tax Burden on Corporate Investment Is High in the U.S.',
-          subtitle: ' Marginal Effective Corporate Tax Rate by OECD Country, 2014',
+          subtitle: 'Marginal Effective Corporate Tax Rate by OECD Country, 2014',
           image: 'images/4_7.svg',
           format: 'square',
           body: ['When a corporation considers an investment, the cost of taxes plays an important part in its decision—and not just corporate taxes. Property taxes, sales taxes, and complex depreciation systems all combine to decrease the after-tax profit from an investment. In the U.S., all these taxes combine for the highest marginal effective tax rate on investment in the developed world of 35.3 percent.'],
@@ -487,6 +486,66 @@
             'This is bad for the economy. Corporate taxes increase the cost of investment, and investment is a key driver of economic growth. In fact, studies show that corporate taxes are the most harmful taxes to economic growth and lead to fewer jobs, lower wages, and lower living standards.',
             'However, corporate taxes aren’t just bad for the economy; they’re bad for people. As we know, corporations are simply groups of people—organizations of workers, shareholders, and consumers. This means that when we tax corporations at high rates, it’s really these people that pay the tax. Workers pay for it through lower wages, shareholders pay for it through lower returns, and consumers pay for it through higher prices.',
             'It’s likely that you fall into one of these three groups. Even if you don’t work for a corporation, you’re probably a shareholder through your retirement account, a customer, or both. As taxpayers, it’s important to realize that a tax on a corporation could end up as a hidden tax on yourself.']
+        },
+        {
+          url: 'Corporations-Pay-Over-700-Billion-in-Total-Taxes-Per-Year',
+          name: 'Corporations Pay Over $700 Billion in Total Taxes Per Year',
+          subtitle: 'Total Foreign and Domestic Taxes Paid by Corporations to All Levels of Government, 1994–2011 (Billions of 2011 Dollars)',
+          image: 'images/5_1.svg',
+          format: 'wide',
+          body: ['While many claim that corporations pay little to nothing in taxes, the reality is a bit more expensive. Corporations pay a substantial amount in income, sales, property, and various other types of taxes to federal, state, and local governments in the United States and across the globe, according to IRS data. In 2011, U.S. corporations paid about $220 billion in income taxes to the U.S. government, over $100 billion in income taxes to foreign governments, and just under $385 billion in other types of taxes. In total, U.S. corporations paid over $711 billion in taxes.'],
+          callout: 'U.S. corporations paid over $13 trillion in taxes to governments around the world between 1994 and 2011.',
+          source: 'Note: Foreign tax credit claimed is used to represent foreign income taxes. Only returns with net income included. Source: IRS.'
+        },
+        {
+          url: 'Large-Companies-Pay-Nearly-90-Percent-of-Corporate-Income-Taxes',
+          name: 'Large Companies Pay Nearly 90 Percent of Corporate Income Taxes',
+          subtitle: 'Share of Taxable Income and Share of Income Taxes by Asset Size, 2011',
+          image: 'images/5_2.svg',
+          format: 'wide',
+          body: ['In 2011, corporations earned slightly less than $1 trillion in taxable income and paid about $221 billion in income taxes. However, businesses with over $2.5 billion in assets paid the vast majority of corporate income taxes. These corporations earned 77 percent of corporate taxable income and paid 68 percent of all corporate income taxes. Corporations with under $10 million in assets earned 4 percent of corporate taxable income and paid 5 percent of corporate income taxes.'],
+          callout: 'The U.S. Treasury relies on fewer than 25,000 companies for around 10 percent of all federal revenue.',
+          source: 'Note: Data includes both C corporations and S corporations. Source: IRS.'
+        },
+        {
+          url: 'Corporations-Face-High-Effective-Tax-Rates-Across-All-Industries',
+          name: 'Corporations Face High Effective Tax Rates Across All Industries',
+          subtitle: 'Share of Taxable Income and Share of Income Taxes by Asset Size, 2011',
+          image: 'images/5_3.svg',
+          format: 'wide',
+          body: ['The U.S. taxes corporate income on a worldwide basis, which means no matter where in the world a U.S corporation earns income, that income is subject to the U.S. federal corporate tax rate of 35 percent. We see this is close to what corporations actually pay when we look at corporate effective tax rates by industry on worldwide income taxes and worldwide income. Still, the effective tax rate varies by industry due to the profitability of an industry in a given year, how much business they do overseas, and different benefits in the tax code. '],
+          callout: '',
+          source: 'Note: Manufacturing does not include Petroleum and coal products. Foreign tax credit claimed is used to represented foreign income taxes. Source: IRS.'
+        },
+        {
+          url: 'Depreciation-Requires-Businesses-to-Pay-Tax-on-Income-That-Doesnt-Exist',
+          name: 'Depreciation Requires Businesses to Pay Tax on Income That Doesn’t Exist',
+          subtitle: 'Average Depreciation Allowance, Disallowed Cost Recovery, and Tax on $100 of Capital Investment in the U.S. ',
+          image: 'images/5_4.svg',
+          format: 'wide',
+          body: ['Economists define profit as all the money you make (revenue) minus all your costs. Unfortunately, this is not how the tax code defines profits. When it comes to capital investment—a business’s purchase of machines, equipment, buildings—the tax code requires businesses to spread costs over years, and sometimes decades. Due to inflation and the time value of money, this results in businesses not being able to claim the full cost of their investments. In fact, U.S. businesses are only able to deduct an average of 62.4 percent of costs across all types of capital investments.'],
+          callout: 'Full expensing would bring neutral treatment to the tax code by allowing businesses to fully deduct the cost of capital investment.',
+          source: 'Note: This exercise evaluates the present discounted value of the average allowable deduction over the life of an asset. Source: CBT Tax Database; Tax Foundation calculations.'
+        },
+        {
+          url: 'Corporations-Receive-Only-13-Percent-of-All-Tax-Expenditures',
+          name: 'Corporations Receive Only 13 Percent of All Tax Expenditures',
+          subtitle: 'Corporate vs. Individual Tax Expenditures in Billions of Dollars, Fiscal Year 2014',
+          image: 'images/5_5.svg',
+          format: 'square',
+          body: ['Despite the notion that corporations receive a large amount of special tax breaks, the majority of tax expenditures benefit individual taxpayers. For the 2014 fiscal year, the Office of Management and Budget projects that corporations will receive only 13 percent of all tax expenditures, or $148 billion. Individuals, on the other hand, will receive $1.036 trillion in tax expenditures. In total, tax expenditures have an estimated value of $1.2 trillion in 2014.'],
+          callout: '',
+          source: 'Source: Office of Management and Budget.'
+        },
+        {
+          url: '17-US-States-Have-a-Combined-Corporate-Tax-Rate-Over-40-Percent',
+          name: '17 U.S. States Have a Combined Corporate Tax Rate Over 40 Percent',
+          subtitle: 'Combined Corporate Tax Rates Across the States, 2014',
+          image: 'images/5_6.svg',
+          format: 'wide',
+          body: ['Corporations operating in the U.S. are liable for income taxes at both the federal and state level. It is widely known that the U.S. combined corporate tax rate (the federal rate of 35 percent plus the average state rate) is the highest in the developed world at 39.1 percent. But the combined tax rate in 29 U.S. states surpasses even this. The state with the highest combined corporate tax rate is Pennsylvania. Six states have no state-level corporate tax rate and are tied with a rate of 35 percent.'],
+          callout: '44 states (including the District of Columbia) have higher corporate tax rates than any other place in the developed world.',
+          source: 'Source: Tax Foundation calculations.'
         },
         {
           url: 'Chapter-6',
@@ -572,12 +631,84 @@
         {
           url: 'Effective-Tax-Rates-on-Foreign-Income-Vary-Substantially-by-Industry',
           name: 'Effective Tax Rates on Foreign Income Vary Substantially by Industry',
-          subtitle: 'Effective Foreign Tax Rates by Industry ',
+          subtitle: 'Effective Foreign Tax Rates by Industry',
           image: 'images/6_8.svg',
           format: 'square',
           body: ['The effective corporate income tax rate faced by corporations overseas varies by industry. According to the most recent IRS data, Petroleum and coal products companies faced an effective corporate tax rate of 36 percent, higher than any other industry. This was followed by Mining (35 percent) and Services (32 percent). Manufacturers, which accounted for a large portion of foreign-earned income, faced an average effective corporate tax rate of 22 percent on their foreign earnings.'],
           callout: 'Although the foreign effective tax rate across industries differ, these companies will end up paying at least a 35 percent corporate tax rate on all their foreign earnings due to the U.S.’s worldwide corporate tax system.',
           source: 'Note: Manufacturing does not include Petroleum and coal products. Source: IRS Form 1118; Tax Foundation calculations.'
+        },
+        {
+          url: 'Chapter-7',
+          name: 'Chapter 7',
+          subtitle: 'What Would Happen If We Fixed the Tax Code?',
+          image: 'images/chapter7-bg.jpg',
+          format: 'chapter',
+          body: ['Our current tax code isn’t good for business. It’s uncompetitive and imposes high tax rates on all types of business and investment. This is bad for the economy.',
+            'Incomes are stagnant, and 2 percent economic growth appears to be the new normal. Meanwhile, U.S. saving is in long-term decline and investment is barely keeping pace with the wearing out of the buildings and equipment businesses require to work.',
+            'We’ve tried nearly everything, but what would happen if we tried tax reform?',
+            'Lower taxes on businesses and investment would boost employment and incomes. A move to full expensing would allow businesses to fully account for the economic cost of investment in the tools they use to produce. A shift to a territorial tax system would place businesses operating in a foreign country on an equal footing with foreign competition.',
+            'These three changes would be a boon for economic growth and U.S. competitiveness. Cutting the corporate tax rate to 25 percent and moving to full expensing would increase the size of the economy by $1 trillion and add over 1 million new jobs. Cutting the tax rate for pass-through businesses would produce even more jobs and higher incomes.',
+            'At the end of the day, the goal of public policy should be to improve lives. Tax reform can help do that through higher wages, more jobs, and greater economic opportunity.',]
+        },
+        {
+          url: 'Lowering-the-Corporate-Tax-Rate-Would-Increase-GDP Without-Reducing-Revenue',
+          name: 'Lowering the Corporate Tax Rate Would Increase GDP Without Reducing Revenue',
+          subtitle: 'Percent Change in GDP and Federal Revenues Due to Individual Tax Rate Changes',
+          image: 'images/7_1.svg',
+          format: 'wide',
+          body: ['Cutting the individual tax rate would have positive effects for economic growth by leaving more money available for investment and increasing the incentive to work. The often-discussed tax rate cut to 25 percent would grow the economy by nearly 2 percent and create 1.1 million jobs. However, it’s important to note that individual tax cuts would also result in lost revenue for the federal government. Conversely, raising individual tax rates would raise federal revenue, but at the cost of slower growth and lower incomes for everyone.'],
+          callout: 'Changes to individual tax rates affect pass-through businesses, because they pay taxes on individual tax returns.',
+          source: 'Source: Tax Foundation Taxes and Growth Model.'
+        },
+        {
+          url: 'Eliminating-the-Corporate-Income-Tax-Is-Self-Financing',
+          name: 'Eliminating the Corporate Income Tax Is Self-Financing',
+          subtitle: 'Sources that Offset Revenue Loss from Eliminating the Corporate Income Tax (Billions of 2013 Dollars)',
+          image: 'images/7_2.svg',
+          format: 'square',
+          body: ['In the long run, eliminating the corporate income tax would actually increase total federal revenue. This is due to economic growth and the distribution of corporate income to other taxpayers. The loss of corporate taxes as a revenue stream would lead to a loss of about $274 billion per year. However, this lost corporate revenue would be replaced entirely by an increase in total federal revenue of $274 billion due to more economic activity. In fact, more jobs and higher wages would result in $175.2 billion in new income tax revenue and over $80 billion dollars in new payroll tax revenue. Customs, excise taxes, and the estate tax would combine with a few other taxes for the remaining $17.9 billion.'],
+          callout: '',
+          source: 'Source: Tax Foundation Taxes and Growth Model.'
+        },
+        {
+          url: 'Individual-Tax-Rate-Cuts-Would-Grow-the-Economy-but-Dont-Pay-for-Themselves',
+          name: 'Individual Tax Rate Cuts Would Grow the Economy, but Don’t Pay for Themselves',
+          subtitle: 'Percent Change in GDP and Federal Revenues Due to Individual Tax Rate Changes',
+          image: 'images/7_3.svg',
+          format: 'wide',
+          body: ['Cutting the individual tax rate would have positive effects for economic growth by leaving more money available for investment and increasing the incentive to work. The often-discussed tax rate cut to 25 percent would grow the economy by nearly 2 percent and create 1.1 million jobs. However, it’s important to note that individual tax cuts would also result in lost revenue for the federal government. Conversely, raising individual tax rates would raise federal revenue, but at the cost of slower growth and lower incomes for everyone.'],
+          callout: '',
+          source: 'Source: Tax Foundation Taxes and Growth Model.'
+        },
+        {
+          url: 'Lowering-Investment-Taxes-Would-Grow-the-Economy-and-Increase-Revenues',
+          name: 'Lowering Investment Taxes Would Grow the Economy and Increase Revenues',
+          subtitle: 'Percent Change in GDP and Revenue Due to Changes in Capital Gains and Dividend Tax Rates',
+          image: 'images/7_4.svg',
+          format: 'wide',
+          body: ['Capital gains and dividend taxes are a second layer of taxes on corporate profits and have adverse economic effects. When we limit this double taxation, the economy responds positively. In fact, if we were to lower capital gains and dividend tax rates from 20 percent to 10 percent, we would see additional growth of 2.7 percent. That equates to over $445 billion in additional economic activity and over 500,000 new jobs. Because tax cuts on investment are so effective, the resulting increased economic activity would actually lead to higher federal revenues.'],
+          callout: '',
+          source: 'Source: Tax Foundation Taxes and Growth Model.'
+        },
+        {
+          url: 'Full-Expensing-Would-Grow-the-Economy-by-870-Billion',
+          name: 'Full Expensing Would Grow the Economy by $870 Billion',
+          subtitle: 'Economic Effect of Implementing Full Expensing of Physical Capital',
+          image: 'images/7_5.svg',
+          format: 'square',
+          body: ['The current tax code requires businesses to write off the cost of capital investment over multiple years. Full expensing would allow businesses to deduct the entire cost of investment in equipment, factories, and other tools of production in the year the cost is incurred. This would correctly define business income and lower the cost of investment, which would then increase investment in property and equipment. This in turn would increase GDP by more than 5 percent, wages by roughly 4.5 percent, and federal revenues by 4.6 percent.'],
+          callout: '',
+          source: 'Source: Tax Foundation Taxes and Growth Model.'
+        },
+        {
+          url: 'Tax-Reform-Could-Grow-the-Economy-by-2-5-Trillion',
+          name: 'Tax Reform Could Grow the Economy by $2.5 Trillion',
+          subtitle: 'Economic Effects of Corporate and Individual Rate Cut to 25 Percent, Capital Gains and Dividends to 10 Percent, and Full Expensing',
+          image: 'images/7_6.svg',
+          format: 'wide',
+          body: ['Tax reform that lowered taxes on businesses and investment would provide a huge boost to the economy. If we were to cut tax rates to 25 percent on corporate and pass-through businesses, move to full expensing, and lower capital gains and dividend rates to 10 percent, the economy would be over 11 percent larger in the long run. As a result, the economy would be $2.5 trillion larger by 2024. This kind of tax reform would increase investment by 33 percent, boost wages by 8.4 percent, and create nearly 3 million jobs.'],
+          source: 'Source: Tax Foundation Taxes and Growth Model.'
         }
       ];
 
