--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chartbook</title>
+    <title>Business in America Illustrated | Tax Foundation</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="Chartbook Prototype">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="bower_components/platform/platform.js"></script>
     <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
@@ -18,6 +17,7 @@
     <link rel="import" href="bower_components/core-a11y-keys/core-a11y-keys.html">
     <link rel="import" href="bower_components/chartbook-item/chartbook-item.html">
     <link rel="import" href="bower_components/flatiron-director/flatiron-director.html">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   </head>
@@ -40,6 +40,10 @@
               <a href="#introduction"></a>
             </chartbook-item>
 
+            <chartbook-item label="About This Book" url="about" selected="{{route}}" class="intro-item">
+              <a href="#about"></a>
+            </chartbook-item>
+
             <template repeat="{{page in pages}}">
               <chartbook-item label="{{page.name}}" url="{{page.url}}" selected="{{route}}" class="{{ {'chapter-item': page.format == 'chapter'} | tokenList }}">
                 <a href="#{{page.url}}"></a>
@@ -51,6 +55,7 @@
 
         <core-toolbar tool flex>
           <div flex></div>
+          <a href="#about" style="color:#fff"><core-icon-button icon="help"></core-icon-button></a>
           <core-icon-button icon="chevron-left" on-click="{{goToPrevious}}"></core-icon-button>
           <core-icon-button icon="chevron-right" on-click="{{goToNext}}"></core-icon-button>
         </core-toolbar>
@@ -67,7 +72,7 @@
             <section url="introduction" layout>
               <div class="page-container">
                 <h1 style="color:#757575;font-size:48px;margin:0 0 20px;">Introduction</h1>
-                <div style="column-count:2;column-gap:20px;-moz-column-count: 2;-moz-column-gap: 20px;-webkit-column-count: 2;-webkit-column-gap: 20px;">
+                <div class="chapter-body">
                   <span style="color:#085197;font-weight:700"><p>Americans often look at businesses impersonally. We think of them as lifeless entities that earn profits and don’t do much else. When we think of businesses this way, it becomes very easy to think that business taxes are somehow different than other taxes.</p>
                   <p>But the reality is that businesses are simply groups of people; they are workers, consumers, and shareholders.</p></span>
                   <p>This means that when we tax businesses, we actually tax people; workers through lower wages, consumers through higher prices, and shareholders through lower returns. Furthermore, the majority of businesses are, in fact, a person that the tax code treats as a business.</p>
@@ -75,6 +80,32 @@
                   <p>America’s high-tax environment stifles the economy and makes work and investment more expensive. This is bad for long-term prosperity.</p>
                   <p>The good news is that there is a solution. Tax reform that lowers taxes on businesses and investment can create jobs, increase incomes, and lead to higher living standards.</p>
                   <p>This book is your visual guide to business taxes in America. It discusses the vast array of business types and sizes, the sectors of the economy they serve, and the effects of taxes on U.S. businesses and the people who build, create, and maintain them.</p>
+                </div>
+              </div>
+            </section>
+
+            <section url="about" layout>
+              <div class="page-container">
+                <h1 style="color:#757575;font-size:48px;margin:0 0 20px;">About This Book</h1>
+                <div>
+                  <h2>About the Tax Foundation</h2>
+                  <p>The <a href="http://taxfoundation.org">Tax Foundation</a> is the nation’s leading independent tax policy research organization. Since 1937, our principled research, insightful analysis, and engaged experts have informed smarter tax policy at the federal, state, and local levels.</p>
+                  <h2>Attributions</h2>
+                  <p>Scott Hodge<br />
+                  President</p>
+                  <p>Andrew Lundeen<br />
+                  Manager of Federal Projects</p>
+                  <p>Kyle Pomerleau<br />
+                  Economist</p>
+                  <p>Alan Cole<br />
+                  Economist</p>
+                  <h3>Publications</h3>
+                  <p>Donnie Johnson<br />
+                  Publications Manager</p>
+                  <p>Dan Carvajal<br />
+                  Publications Associate, Designer</p>
+                  <p>Tom VanAntwerp<br />
+                  Director of IT</p>
                 </div>
               </div>
             </section>
@@ -102,6 +133,51 @@
                   <div class="page-container">
                     <h1>{{page.name}}</h1>
                     <h2>{{page.subtitle}}</h2>
+
+                    <p class="share-buttons">
+                      <a 
+                        class="social-link facebook" 
+                        href="http://www.facebook.com/share.php?u={{rootUrl + '#' + page.url}}" 
+                        id="fb-share" 
+                        rel="nofollow" 
+                        target="_blank" 
+                        title="Share on Facebook">
+                          <i class="fa fa-facebook"></i><span class="hide-on-small"> Share</span>
+                      </a>
+                      <a 
+                        class="social-link twitter" 
+                        href="http://twitter.com/home?status={{page.name}}%20via%20@TaxFoundation%20{{rootUrl + '#' + page.url}}" 
+                        id="tweet" 
+                        rel="nofollow" 
+                        target="_blank" 
+                        title="Tweet this content">
+                          <i class="fa fa-twitter"></i><span class="hide-on-small"> Tweet</span>
+                      </a>
+                      <a 
+                        class="social-link linkedin" 
+                        href="http://www.linkedin.com/shareArticle?mini=true&url={{rootUrl + '#' + page.url}}" 
+                        id="linkedin" 
+                        rel="nofollow" 
+                        target="_blank" 
+                        title="Share on LinkedIn">
+                          <i class="fa fa-linkedin"></i><span class="hide-on-small"> LinkedIn</span>
+                      </a>
+                      <a 
+                        class="social-link gplus" 
+                        href="https://plus.google.com/share?url={{rootUrl + '#' + page.url}}" 
+                        id="gplus-share" 
+                        title="Plus 1 on Google+">
+                          <i class="fa fa-google-plus"></i>
+                      </a>
+                      <a 
+                        class="social-link email" 
+                        href="mailto:?body=Take a look at this chart I found: {{page.name}}. You can read it here: {{rootUrl + '#' + page.url}}" 
+                        id="email-share" 
+                        title="Email to a Friend">
+                          <i class="fa fa-envelope"></i>
+                      </a>
+                    </p>
+
                     <img class="{{page.format}}" src="{{page.image}}" />
                     <template repeat="{{paragraph in page.body}}">
                       <p>{{paragraph}}</p>
@@ -124,12 +200,16 @@
     (function() {
       var DEFAULT_ROUTE = 'cover';
 
+      var ROOT_URL = 'http://interactive.taxfoundation.org/business-in-america/'
+
       var template = document.querySelector('template[is="auto-binding"]');
 
       template.addEventListener('template-bound', function(e) {
         // Use URL hash for initial route. Otherwise, use the first page.
         this.route = this.route || DEFAULT_ROUTE;
       });
+
+      template.rootUrl = ROOT_URL;
 
       template.goToNext = function(e, detail, sender) {
         var pages = document.querySelector('#pages');
@@ -303,11 +383,21 @@
           source: 'Note: Only includes firms with employees. Source: U.S. Census Bureau.'
         },
         {
+          url: 'C-Corporations-Pay-the-Highest-Private-Sector-Wages',
+          name: 'C Corporations Pay the Highest Private Sector Wages',
+          subtitle: 'Average Employee Pay by Type of Organization, 2011 ',
+          image: 'images/2_5.svg',
+          format: 'square',
+          body: ['Corporations pay employees a higher average annual wage than pass-through entities. Average pay at corporations is $53,444 a year, while average pay for pass-through entities is about $38,000 a year. While corporations come close, they don’t match the annual average pay for government employees of $53,661. The average pay across the entire private sector is $46,458.'],
+          callout: '',
+          source: 'Note: Only includes firms with employees. Source: U.S. Census Bureau.'
+        },
+        {
           url: 'Service-Industries-Are-the-Largest-Segment-of-the-US-Economy',
           name: 'Service Industries Are the Largest Segment of the U.S. Economy',
           subtitle: 'Gross Domestic Product by Industry in 2013 (Billions of Dollars)',
-          image: 'images/2_5.svg',
-          format: 'square',
+          image: 'images/2_6.svg',
+          format: 'wide',
           body: ['The U.S. economy is largely service focused. Service industries—including government—make up four of the five largest individual sectors of the economy. The largest sector of the economy in 2013 was the financial and real estate sector at $3.3 trillion, followed by government ($2.2 trillion) and manufacturing ($2.1 trillion).'],
           callout: 'Since 1997, the service industry has expanded from 64.2 percent of the economy to 66.7 percent, while the production sector has dropped from 22.5 percent of the economy to 20.3 percent.',
           source: 'Source: Bureau of Economic Analysis.'
@@ -316,7 +406,7 @@
           url: 'Government-Employs-More-Workers-Than-Any-Other-Industry',
           name: 'Government Employs More Workers Than Any Other Industry',
           subtitle: 'Employment by Industry in 2012 (Millions of People)',
-          image: 'images/2_6.svg',
+          image: 'images/2_7.svg',
           format: 'wide',
           body: ['Governments at all levels employ more people than any other single industry with 24.4 million people, or over 17 percent of all employees.',
             'Combined, the service industry accounts for 68 percent of all employees. Goods-producing industries, such as manufacturing and mining, only account for about 19 million jobs (14 percent), with the most coming from manufacturing with 11.9 million.'],
