--- a/index.html
+++ b/index.html
@@ -869,8 +869,8 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-10513207-3', 'auto');
-      ga('send', 'pageview');
+      ga('create', 'UA-10513207-3', {'allowAnchor': true});
+      ga('send', 'pageview', { 'page': location.pathname + location.search + location.hash});
 
     </script>
   </body>
