Add chapter 2 cover

--- a/index.html
+++ b/index.html
@@ -381,16 +381,13 @@
         {
           url: 'Chapter-2',
           name: 'Chapter 2',
-          subtitle: 'Who Are America’s Businesses?',
+          subtitle: 'Illinois’ Tax Code: The Basics',
           image: 'images/chapter2-bg.jpg',
           format: 'chapter',
-          chapterColor: '#3a4faa',
-          body: ['Businesses serve nearly every need of our daily lives and come in all shapes and sizes. Small businesses, large businesses, and international businesses, we have them all in America. There are companies with hundreds of thousands of employees, millions of shareholders, and tens of millions of customers, and there are companies with one person—who is both the worker and the shareholder—and a handful of clients.',
-            'In total, the United States is home to over 32.5 million businesses, nearly 150 million workers, and trillions of dollars of productivity.',
-            'Ninety-five percent of businesses are pass-through entities. These businesses pay taxes on individual tax returns and are organized as sole proprietorships, partnerships, and S corporations.',
-            'We often think of pass-throughs as small businesses. While this is generally true, some pass-through businesses can be very large and rival large C corporations in terms of size.',
-            'On average, though, C corporations are 30 times larger than pass-throughs in terms of revenue. Their employees often tend to receive higher incomes than pass-through businesses and, despite there being far fewer C corporations relative to pass-through businesses, C corporations earn about 40 percent of all business income in the U.S.',
-            'The comparable economic footprint of C corporations and pass-through businesses means tax reform must fix the entire tax code, as both types of businesses are crucial to the future economic success of the United States.']
+          chapterColor: 'rgba(78,175,76,0.9)',
+          body: ['Illinois’ state and local governments rely on several types of taxes to raise revenue. Property taxes, income taxes, and sales taxes are well known, but other revenue sources include excise taxes, the estate tax, a tax on capital stock (known as the franchise tax), and funding from the federal government, among others.',
+            'In general, Illinoisans face a high state and local tax burden. Inflation-adjusted tax collections have risen over time, from $17.4 billion in 1961 to $66.5 billion in 2011. The composition of those collections has changed as well. The local share of collections has become smaller, and the state share has increased.',
+            'While the level of taxes levied matters, the structure of each tax is equally important. Each tax type has pros and cons, and each can contribute to or detract from a state’s overall tax climate. Similarly, other budgetary issues, such as federal funding levels and unfunded liabilities, should also be kept in mind when evaluating a state’s revenue structure.']
         },
         {
           url: '95-Percent-of-Businesses-Are-Pass-through-Entities',
