--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
                       <p>{{paragraph}}</p>
                     </template>
                     <p class="callout">{{page.callout}}</p>
-                    <p><em>{{page.source}}</em></p>
+                    <template repeat="{{source in page.source}}">
+                      <p class="source">{{source}}</p>
+                    </template>
                   </div>
                 </section>
               </template>
@@ -326,7 +328,81 @@
           format: 'wide',
           body: ['Historically, Illinois’ personal income per person has been above both the U.S. level and the levels of neighboring states (except for a brief blip in the early 1940s). In recent years, however, Illinois and other states have seen a convergence in relative income per capita. In 1929, Illinois’ personal income per person sat at 136 percent of the U.S. level, with all neighboring states trailing. By 2013, the gap between Illinois and its neighbors had decreased substantially as Illinois’ per person income declined to 105 percent of the U.S. average.'],
           callout: '',
-          source: 'Source: Bureau of Economic Analysis, Regional Economic Accounts, Annual State Personal Income and Employment.'
+          source: ['Source: Bureau of Economic Analysis, Regional Economic Accounts, Annual State Personal Income and Employment.']
+        },
+        {
+          url: 'illinois-metro-income-tends-higher-than-non-metro',
+          name: 'Illinois’ Metro Income Tends to Be Higher than Non-Metro',
+          subtitle: 'Personal Income per Capita, Metro and Non-Metro Illinois (1969-2013)',
+          image: 'images/1-2.svg',
+          format: 'wide',
+          body: ['As in other states, personal income per capita levels are not uniform throughout Illinois. Metro-area income per person tends to be higher than non-metro-area income. This is likely a result of the differing industry makeups of metro versus non-metro Illinois. However, incomes tend to grow at the same rate in both areas over the long run. Notably, non-metro incomes showed more resilience during the most recent recession.'],
+          callout: '',
+          source: ['Note: Counties designated by the Bureau of Economic Analysis as metropolitan are Alexander, Bond, Boone, Calhoun, Champaign, Clinton, Cook, DeKalb, DeWitt, DuPage, Ford, Grundy, Henry, Jackson, Jersey, Kane, Kankakee, Kendall, Lake, McHenry, McLean, Macon, Macoupin, Madison, Marshall, Menard, Mercer, Monroe, Peoria, Piatt, Rock Island, St. Clair, Sangamon, Stark, Tazewell, Vermilion, Will, Williamson, Winnebago, and Woodford.',
+            'Source: Bureau of Economic Analysis, Regional Economic Accounts, Local Area Personal Income and Employment.']
+        },
+        {
+          url: 'illinois-has-one-of-the-largest-state-economies',
+          name: 'Illinois Has One of the Largest State Economies in the Country',
+          subtitle: 'State Gross Domestic Product, Select States (2013)',
+          image: 'images/1-3.svg',
+          format: 'wide',
+          body: ['Illinois has one of the largest economies in the country (fifth largest based on state GDP) and is outranked only by California, Texas, New York, and Florida. All of Illinois’ neighbors, however, have considerably smaller economies. Much of this difference is driven by the large urban center of Chicago, the third largest city in the United States. The fact that Illinois is a large, populous state surrounded by smaller-economy states puts it in a unique regional position.'],
+          callout: '',
+          source: ['Source: Bureau of Economic Analysis, Regional Economic Analysis, Gross Domestic Product (GDP) by State, “GDP in current dollars.”']
+        },
+        {
+          url: 'metro-area-employment-illinois-very-different-from-non-metro',
+          name: 'Metro-Area Employment in Illinois Is Very Different from Non-Metro',
+          subtitle: 'Industry Employment as a Percent of Total Area Employment, Metro and Non-Metro Illinois (2013)',
+          image: 'images/1-4.svg',
+          format: 'square',
+          body: ['State economies are diverse, and different areas of a state often have unique local economies, something that can be seen by comparing the largest sectors (based on the share of area total employment) in metro versus non-metro Illinois.',
+            'For example, agriculture makes up 10.2 percent of Illinois’ non-metro employment but only 0.5 percent of metro-area employment. Similarly, while manufacturing, retail, and state and local government are prominent in both areas, these sectors make up a larger share of employment in non-metro areas of the state.'],
+          callout: '',
+          source: ['Note: Counties designated by the Bureau of Economic Analysis as metropolitan are Alexander, Bond, Boone, Calhoun, Champaign, Clinton, Cook, DeKalb, DeWitt, DuPage, Ford, Grundy, Henry, Jackson, Jersey, Kane, Kankakee, Kendall, Lake, McHenry, McLean, Macon, Macoupin, Madison, Marshall, Menard, Mercer, Monroe, Peoria, Piatt, Rock Island, St. Clair, Sangamon, Stark, Tazewell, Vermilion, Will, Williamson, Winnebago, and Woodford.',
+            'Source: Bureau of Economic Analysis, Regional Economic Accounts, Local Area Personal Income and Employment.']
+        },
+        {
+          url: 'illinois-economy-moving-away-from-goods-toward-services',
+          name: 'Illinois’ Economy Is Moving away from Goods and toward Services',
+          subtitle: 'Services and Goods as a Percent of Total Private State GDP, Illinois Statewide (1963-2013)',
+          image: 'images/1-5.svg',
+          format: 'wide',
+          body: ['Five decades ago, economic sectors involving the production of tangible goods—agriculture, manufacturing, construction, and mining—made up approximately 40 percent of the Illinois economy (based on the share of state GDP). Today, those sectors only comprise 20 percent of the state’s economy, while service-providing industries make up the remaining 80 percent.'],
+          callout: '',
+          source: ['Source: Bureau of Economic Analysis, Regional Economic Accounts, Gross Domestic Product (GDP) by State, “GDP in current dollars.”']
+        },
+        {
+          url: 'professional-services-education-health-government-employ-most-people-in-illinois',
+          name: 'Professional & Business Services, Private Education & Health Services, and Government Employ the Most People in Illinois',
+          subtitle: 'Percent of Total Nonfarm Employment by Sector, Illinois Statewide (2013)',
+          image: 'images/1-6.svg',
+          format: 'square',
+          body: ['The majority of employees in Illinois work in service-providing sectors. The professional and business services sector employs the greatest percentage of workers at 15.6 percent of all employees. Other large employer industries include private-sector education and health services firms (15.2 percent), state and local government including public schools (12.5 percent), retail businesses (10.5 percent), manufacturing firms (10.2 percent), and leisure and hospitality businesses (9.6 percent).'],
+          callout: '',
+          source: ['Note: Percentages may not add to 100 due to rounding.',
+            'Source: Bureau of Labor Statistics, Quarterly Census of Employment and Wages (Illinois Statewide for All establishment sizes, All Employees, Private establishments).']
+        },
+        {
+          url: 'illinois-seen-consistent-out-migration-over-last-20-years',
+          name: 'Illinois Has Seen Consistent Out-Migration over the Last 20 Years',
+          subtitle: 'Migration to and from Illinois Based on the Number of Federal Tax Exemptions Claimed (1993-2011)',
+          image: 'images/1-7.svg',
+          format: 'wide',
+          body: ['Since the early 1990s, Illinois has seen a net of 1,004,952 people leave the state, with net out-migration occurring each and every year since then. While people move for many reasons, this is still an important metric for a state to measure. Illinois has lost the most people to Florida, Indiana, Wisconsin, Texas, and Arizona. It has gained the most people from Michigan, Ohio, New York, New Jersey, and Pennsylvania. '],
+          callout: '',
+          source: ['Source: Internal Revenue Service, Statistics of Income Tax Stats, “State-to-State Migration Data.”']
+        },
+        {
+          url: 'illinois-unemployment-tends-higher-than-us-rate',
+          name: 'Unemployment Rate in Illinois Tends to Be Higher than the U.S. Rate',
+          subtitle: 'Monthly Seasonally Adjusted Unemployment Rate, Illinois and U.S. (1976-2014)',
+          image: 'images/1-8.svg',
+          format: 'wide',
+          body: ['Since the early 1980s, Illinois’ unemployment rate has generally exceeded that of the U.S., except for a period in the mid-1990s. The rate in Illinois hit highs in the early 1980s (12.9 percent) and early 2010 (11.4 percent), both of which were significantly higher than the U.S. rate at those times. As of December 2014, the Illinois rate still exceeded that of the U.S.'],
+          callout: '',
+          source: ['Source: Bureau of Labor Statistics, Local Area Unemployment Statistics.']
         },
         {
           url: 'Chapter-2',
